change bg music

--- a/index.html
+++ b/index.html
@@ -508,78 +508,78 @@
                                 <div class="tab-pane fade in active grid-wrapper" id="groomsmen">
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E4%BC%B4%E5%A8%98%E5%85%A8%E4%BD%93.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E4%BC%B4%E5%A8%98%E5%85%A8%E4%BD%93.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>陈文怡</h3>
+                                            <h3>伴娘团</h3>
                                             <span></span>
-                                            <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                            </ul>
+                                            <!--<ul class="social-links">-->
+                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
+                                            <!--</ul>-->
                                         </div>
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%A7%9A%E4%BD%B3%E4%B8%BD.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%A7%9A%E4%BD%B3%E4%B8%BD.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banlang/%E4%BC%B4%E9%83%8E%E5%9B%A2_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E4%BC%B4%E9%83%8E%E5%9B%A2_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>姚佳丽</h3>
+                                            <h3>伴郎团</h3>
                                             <span></span>
-                                            <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                            </ul>
+                                            <!--<ul class="social-links">-->
+                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
+                                            <!--</ul>-->
                                         </div>
                                     </div>
-                                    <div class="grid">
-                                        <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" alt class="img img-responsive">
-                                            </a>
-                                        </div>
-                                        <div class="details">
-                                            <h3>秦萍</h3>
-                                            <span></span>
-                                            <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="grid">
-                                        <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                            </a>
-                                        </div>
-                                        <div class="details">
-                                            <h3>刘琳</h3>
-                                            <span></span>
-                                            <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="grid">
-                                        <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9D%AF%E5%AD%90_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9D%AF%E5%AD%90_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                            </a>
-                                        </div>
+                                    <!--<div class="grid">-->
+                                        <!--<div class="img-holder">-->
+                                            <!--<a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" class="popup-image">-->
+                                                <!--<img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" alt class="img img-responsive">-->
+                                            <!--</a>-->
+                                        <!--</div>-->
+                                        <!--<div class="details">-->
+                                            <!--<h3>秦萍</h3>-->
+                                            <!--<span></span>-->
+                                            <!--<ul class="social-links">-->
+                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
+                                            <!--</ul>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div class="grid">-->
+                                        <!--<div class="img-holder">-->
+                                            <!--<a href="http://p0myo90fu.bkt.clouddn.com/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">-->
+                                                <!--<img src="http://p0myo90fu.bkt.clouddn.com/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">-->
+                                            <!--</a>-->
+                                        <!--</div>-->
+                                        <!--<div class="details">-->
+                                            <!--<h3>刘琳</h3>-->
+                                            <!--<span></span>-->
+                                            <!--<ul class="social-links">-->
+                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
+                                            <!--</ul>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div class="grid">-->
+                                        <!--<div class="img-holder">-->
+                                            <!--<a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9D%AF%E5%AD%90_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">-->
+                                                <!--<img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9D%AF%E5%AD%90_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">-->
+                                            <!--</a>-->
+                                        <!--</div>-->
                                         <!--<div class="details">-->
                                             <!--<h3></h3>-->
                                             <!--<span></span>-->
@@ -590,24 +590,24 @@
                                                 <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
                                             <!--</ul>-->
                                         <!--</div>-->
-                                    </div>
-                                    <div class="grid">
-                                        <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                            </a>
-                                        </div>
-                                        <div class="details">
-                                            <h3>朱丽岩</h3>
-                                            <span></span>
-                                            <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
+                                    <!--</div>-->
+                                    <!--<div class="grid">-->
+                                        <!--<div class="img-holder">-->
+                                            <!--<a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">-->
+                                                <!--<img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">-->
+                                            <!--</a>-->
+                                        <!--</div>-->
+                                        <!--<div class="details">-->
+                                            <!--<h3>朱丽岩</h3>-->
+                                            <!--<span></span>-->
+                                            <!--<ul class="social-links">-->
+                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
+                                            <!--</ul>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
                                     <!--<div class="grid">
                                         <div class="img-holder">
                                             <a href="images/groomsmen/img-6.jpg" class="popup-image">
