--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                                     <p>大家好，我是一个自诩浪漫又闷骚的程序员。我和徐同学认识很多年了，我们高一同班，大概是缘分让我们在大学期间又在南京相遇。感谢她这几年的付出和包容，把我从青葱少年拔成烫头大叔，陪我一起度过大学和研究生生涯。所谓先成家后立业，我们一致决定， 在我步入工作岗位前举行婚礼仪式，请各位亲朋莅临见证我们爱的仪式。</p>
                                     <span class="signature">翁祖建</span>
                                     <ul class="social-links">
-                                        <li><a href="#"><i class="fa fa-wechat"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                                        <li><a href="http://p0myo90fu.bkt.clouddn.com/%E6%96%B0%E6%9C%97%E4%BA%8C%E7%BB%B4%E7%A0%81_%E5%89%AF%E6%9C%AC.png"><i class="fa fa-wechat"></i></a></li>
+                                        <li><a href="https://weibo.com/hankwing/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"><i class="fa fa-weibo"></i></a></li>
+                                        <li><a href="https://github.com/hankwing"><i class="fa fa-github"></i></a></li>
                                         <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                     </ul>
                                 </div>
@@ -436,10 +436,10 @@
                             <div class="details">
                                 <h3>接亲</h3>
                                 <ul>
-                                    <li><i class="fa fa-map-marker"></i>福建省福清市清昌大道融侨城13号楼</li>
-                                    <li><i class="fa fa-clock-o"></i>2018年02月13号 早晨9点</li>
+                                    <li><i class="fa fa-map-marker"></i>福建省福清市三山镇瑟江村100号</li>
+                                    <li><i class="fa fa-clock-o"></i>2018年02月13号 早上9点</li>
                                 </ul>
-                                <p>我将带上阵容强大的伴郎团，早上9点整从福清市清昌大道融侨城13号楼出发，把新娘迎娶回家。
+                                <p>我将带上阵容强大的伴郎团，早上9点整从福清市瑟江村出发，把新娘迎娶回家。
                                     参加接亲仪式的朋友们需在此时间点前到达福清。
                                 </p>
                                 <a class="see-location-btn popup-gmaps" href="BaiduMap.html">
@@ -453,7 +453,7 @@
                                 <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%282%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                                 <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%2837%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                                 <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%281%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%2866%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_2/a%20%2866%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                                 <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%2854%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
@@ -512,16 +512,16 @@
                                                 <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E4%BC%B4%E5%A8%98%E5%85%A8%E4%BD%93.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
-                                        <div class="details">
-                                            <h3>伴娘团</h3>
-                                            <span></span>
-                                            <!--<ul class="social-links">-->
-                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
-                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
-                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
-                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
-                                            <!--</ul>-->
-                                        </div>
+                                        <!--<div class="details">-->
+                                            <!--<h3>伴娘团</h3>-->
+                                            <!--<span></span>-->
+                                            <!--&lt;!&ndash;<ul class="social-links">&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-weixin"></i></a></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-weibo"></i></a></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-instagram"></i></a></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-qq"></i></a></li>&ndash;&gt;-->
+                                            <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+                                        <!--</div>-->
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
@@ -529,16 +529,16 @@
                                                 <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E4%BC%B4%E9%83%8E%E5%9B%A2_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
-                                        <div class="details">
-                                            <h3>伴郎团</h3>
-                                            <span></span>
-                                            <!--<ul class="social-links">-->
-                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
-                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
-                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
-                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
-                                            <!--</ul>-->
-                                        </div>
+                                        <!--<div class="details">-->
+                                            <!--<h3>伴郎团</h3>-->
+                                            <!--<span></span>-->
+                                            <!--&lt;!&ndash;<ul class="social-links">&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-weixin"></i></a></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-weibo"></i></a></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-instagram"></i></a></li>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-qq"></i></a></li>&ndash;&gt;-->
+                                            <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+                                        <!--</div>-->
                                     </div>
                                     <!--<div class="grid">-->
                                         <!--<div class="img-holder">-->
@@ -765,38 +765,38 @@
 
                         <div class="gallery-container gallery-fancybox masonry-gallery">
                             <div class="grid wedding">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB1.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB1.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/1200x800.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/1200x800.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid wedding ceremony">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB2.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB2.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/1000x751.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/1000x751.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid ceremony eudcation">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A61.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A61.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/1000x967.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/1000x967.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid wedding party">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%8F%AD%E7%BA%A7.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%8F%AD%E7%BA%A7.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/1000x1171.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/1000x1171.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid ceremony">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A62.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A62.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/1000x866.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/1000x866.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid party">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%9A%84%E5%BE%90%E6%A2%A6%E9%9B%AA.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%9A%84%E5%BE%90%E6%A2%A6%E9%9B%AA.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/1000x667.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/1000x667.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid wedding">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB3.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB3.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/1000x1086.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/1000x1086.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid ceremony">
@@ -804,15 +804,15 @@
                                     <img src="images/gallery/img-8.jpg" alt class="img img-responsive">
                                 </a> -->
                                 <!--<a href="https://www.youtube.com/embed/XSGBVzeBUbk?autoplay=1" data-type="iframe" class="video-play-btn">-->
-                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A64.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A64.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/897x962.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/897x962.jpg" alt class="img img-responsive">
                                     <i class="fa fa-play"></i>
                                 </a>
 
                             </div>
                             <div class="grid ceremony">
-                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A63.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A63.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/gallery/772x667.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/gallery/772x667.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                         </div>
