--- a/BaiduMap.html
+++ b/BaiduMap.html
@@ -18,12 +18,12 @@
 <script type="text/javascript">
     // 百度地图API功能
     var sContent =
-        "<h4 style='margin:0 0 5px 0;padding:0.2em 0'>福清市融侨城</h4>" +
+        "<h4 style='margin:0 0 5px 0;padding:0.2em 0'>福清市三山镇瑟江村</h4>" +
         "<img style='float:right;margin:4px' id='imgDemo' src='../img/tianAnMen.jpg' width='139' height='104' title=''/>" +
         "<p style='margin:0;line-height:1.5;font-size:13px;text-indent:2em'>接亲地址</p>" +
         "</div>";
     var map = new BMap.Map("allmap");
-    var point = new BMap.Point(119.355178, 25.716586);
+    var point = new BMap.Point(119.5652180625, 25.5087542665);
     var marker = new BMap.Marker(point);
     var infoWindow = new BMap.InfoWindow(sContent);  // 创建信息窗口对象
     var bottom_left_control = new BMap.ScaleControl({anchor: BMAP_ANCHOR_BOTTOM_LEFT});// 左上角，添加比例尺
