--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
                 <i class="fa fa-music"></i>
             </button>
 
-            <!--<div class="music-holder">-->
+            <div class="music-holder">
                 <!--<audio controls="controls" height="100" width="100" autoplay="autoplay" loop="loop">-->
-                    <!--<source src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3" type="audio/mp3" />-->
-                    <!--<embed height="100" width="100" src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3" />-->
-                <!--</audio>-->
-                <!--&lt;!&ndash; <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3"></iframe> &ndash;&gt;-->
+                <audio controls="controls" height="100" width="100" loop="loop">
+                    <source src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3" type="audio/mp3" />
+                    <embed height="100" width="100" src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3" />
+                </audio>
+                <!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3"></iframe> -->
 
-            <!--</div>-->
+            </div>
         </div>
         <!-- end music box -->
 
@@ -190,7 +191,6 @@
                                         <li><a href="http://p0myo90fu.bkt.clouddn.com/%E6%96%B0%E6%9C%97%E4%BA%8C%E7%BB%B4%E7%A0%81_%E5%89%AF%E6%9C%AC.png"><i class="fa fa-wechat"></i></a></li>
                                         <li><a href="https://weibo.com/hankwing/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"><i class="fa fa-weibo"></i></a></li>
                                         <li><a href="https://github.com/hankwing"><i class="fa fa-github"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -201,12 +201,12 @@
                                     <h3>新娘</h3>
                                     <p>我是徐梦雪，目前是中科院遗传所在读女博士一枚。高一第一次见到翁同学，大概怎么也不会想到八年以后，那个“我觉得这个同学乡土气息很浓厚”的人竟然成为我将要相伴一生的人。回想起我们一路走来的点点滴滴，感叹缘分奇妙的同时，更想感谢翁同学在我们感情里的付出。是他的悉心呵护与默默付出，才让我们共同走到这里。</p>
                                     <span class="signature">徐梦雪</span>
-                                    <ul class="social-links">
-                                        <li><a href="#"><i class="fa fa-wechat"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                    </ul>
+                                    <!--<ul class="social-links">-->
+                                        <!--<li><a href="#"><i class="fa fa-wechat"></i></a></li>-->
+                                        <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
+                                        <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+                                        <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
+                                    <!--</ul>-->
                                 </div>
                             </div>
                             <div class="img-holder wow fadeInRightSlow">
