change bg music

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 
         <!-- start count-down-section -->
-        <section class="count-down-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/adventure_2_%E5%89%AF%E6%9C%AC.jpg" data-speed="7">
+        <section class="count-down-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/bg/b%20%2852%29_1_%E5%89%AF%E6%9C%AC.jpg" data-speed="7">
             <div class="container">
                 <div class="row">
                     <div class="col col-md-4">
